Adding swagger doc to endpoints
