# src/controller/controller/client_controller.go
@@ -25,6 +25,16 @@ func NewClientController(clientUseCase contract.ClientUseCase, logger *slog.Logg
 	}
 }
 
+// CreateClient godoc
+// @Summary      Create client
+// @Description  Add new client
+// @Tags         Clients
+// @Accept       json
+// @Produce      json
+// @Param        request   body      input.ClientDto  true  "Client properties"
+// @Success      200  {object}  Response{error=string,data=output.ClientDto}
+// @Failure      500  {object}  swagger.ResourceNotFoundResponse{data=interface{}}
+// @Router       /clients [post]
 func (c *ClientController) CreateClient(w http.ResponseWriter, r *http.Request) {
 	var clientDto dto.ClientDto
 
@@ -102,16 +112,15 @@ func (c *ClientController) CreateClient(w http.ResponseWriter, r *http.Request) 
 
 // GetClientByCpf godoc
 // @Summary      Show client details
-// @Description  Get client by ID
+// @Description  Get client by cpf
 // @Tags         Clients
 // @Accept       json
 // @Produce      json
-// @Param        id   path      string  true  "Account ID"
-// @Param        apiKey header string true "Api key"
+// @Param        cpf   query      integer  true  "Client cpf"
 // @Success      200  {object}  output.ClientDto
-// @Failure      500
-// @Failure      404
-// @Router       /clients/{id} [get]
+// @Failure      500  {object}  swagger.InternalServerErrorResponse{data=interface{}}
+// @Failure      404  {object}  swagger.ResourceNotFoundResponse{data=interface{}}
+// @Router       /clients [get]
 func (c *ClientController) GetClientByCpf(w http.ResponseWriter, r *http.Request) {
 	cpfParam := r.URL.Query().Get("cpf")
 
